# labdroid

./: README.md
data/: baselines.json
evidence/: evidence.txt
labdroid/backend/: README.md  pyproject.toml  setup_companion.py
labdroid/backend/app/: __init__.py  dependencies.py  main.py  state.py
labdroid/backend/app/actuators/: __init__.py  http_actuator.py  mqtt_actuator.py  safety_layer.py
labdroid/backend/app/api/: __init__.py  control.py  jobs.py  reports.py  stats.py  ws.py
labdroid/backend/app/baseline/: __init__.py  manager.py
labdroid/backend/app/core/: __init__.py  config.py  logging.py  rate_limit.py  security.py
labdroid/backend/app/models/: __init__.py  actuator_models.py  report_models.py  schemas.py
labdroid/backend/app/pipeline/: __init__.py  decision.py  explain.py  features_audio.py  features_image.py  preprocess.py  rule_engine.py
labdroid/backend/app/plugins/: __init__.py  base.py  loader.py
labdroid/backend/app/processing/: __init__.py  queue.py  timeout.py  worker.py
labdroid/backend/app/providers/: __init__.py  base.py  litert_provider.py  ollama_provider.py  openrouter_provider.py  registry.py
labdroid/backend/app/reporting/: __init__.py  markdown.py  replay.py  writer.py
labdroid/backend/app/stats/: __init__.py  constants.py  histogram.py  summary.py  timeseries.py
labdroid/backend/plugins/: example_anomaly_plugin.py
labdroid/backend/reports/: pcb-81697.584187.json  pcb-81697.584187.md
reports/: default-674162.934028.json  default-674162.934028.md  default-686806.179307.json  default-686806.179307.md  (+6 more)
(+10 files in other folders)
