[project]
name = "audio-visio-labdroid-backend"
version = "0.1.0"
description = "Production-oriented local multimodal inspection backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "numpy>=1.26.0",
  "pillow>=10.4.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.2.0",
]
